example/src/index.ts
// import CommonLoginSDK from '../../src/index'

// let ahandle = function loginHandle(e: any) {
//   console.log('e===>',e)
// }

// let env = 'test'
// //当前对接的h5链接
// let currentUrl = 'http://172.16.83.192:8888'

// let success = function handleSuccess(value:any) {
//   console.log('success====>',value)
// }

// let error = function handleError(value:any) {
//   console.log('error====>',value)
// }

// // let a = new CommonLoginSDK()

// CommonLoginSDK.init({
//   env,
//   currentUrl,
//   success,
//   error
// })

// // // a.off('login', ahandle)